// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example/RHFAvatar Default smoke-test 1`] = `
<form>
  <label class="MuiBox-root css-fjsr0d">
    <div class="MuiBox-root css-jfdah8">
      <div class="MuiStack-root css-aha7cr-MuiStack-root">
        <span>
        </span>
        <p class="MuiTypography-root MuiTypography-body1 css-2z1cr3-MuiTypography-root">
          Default Avatar
        </p>
      </div>
      <div data-testid="file-upload"
           hidden
           class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth css-hd0s91-MuiInputBase-root-MuiInput-root"
      >
        <input aria-invalid="false"
               name="default"
               type="file"
               accept=".png,.jpeg,.gif,.jpg"
               class="MuiInputBase-input MuiInput-input css-pjfl94-MuiInputBase-input-MuiInput-input"
               value
        >
      </div>
    </div>
  </label>
</form>
`;

exports[`Example/RHFAvatar Required smoke-test 1`] = `
<form>
  <label class="MuiBox-root css-fjsr0d">
    <div class="MuiBox-root css-jfdah8">
      <div class="MuiStack-root css-aha7cr-MuiStack-root">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             aria-hidden="true"
             role="img"
             class="MuiBox-root css-1t9pz9x iconify iconify--majesticons"
             width="1em"
             height="1em"
             viewbox="0 0 24 24"
        >
          <path fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 16v3m0 0v3m0-3h3m-3 0h-3m4-10v-.172a2 2 0 0 0-.586-1.414l-3.828-3.828A2 2 0 0 0 14.172 3H14m6 6h-4a2 2 0 0 1-2-2V3m6 6v3m-6-9H6a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h6"
          >
          </path>
        </svg>
        <p class="MuiTypography-root MuiTypography-body1 css-2z1cr3-MuiTypography-root">
          Required Avatar
        </p>
      </div>
      <div data-testid="file-upload"
           hidden
           class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth css-hd0s91-MuiInputBase-root-MuiInput-root"
      >
        <input aria-invalid="false"
               name="required"
               type="file"
               accept=".png,.jpeg,.gif,.jpg"
               class="MuiInputBase-input MuiInput-input css-pjfl94-MuiInputBase-input-MuiInput-input"
               value
        >
      </div>
    </div>
  </label>
</form>
`;

exports[`Example/RHFAvatar WithImage smoke-test 1`] = `
<form>
  <label class="MuiBox-root css-fjsr0d">
    <div class="MuiBox-root css-jfdah8">
      <div class="MuiStack-root css-aha7cr-MuiStack-root">
        <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-19blu3t-MuiAvatar-root"
             data-testid="avatar"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="PersonIcon"
          >
            <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z">
            </path>
          </svg>
        </div>
      </div>
      <div data-testid="file-upload"
           hidden
           class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth css-hd0s91-MuiInputBase-root-MuiInput-root"
      >
        <input aria-invalid="false"
               name="withImage"
               type="file"
               accept=".png,.jpeg,.gif,.jpg"
               class="MuiInputBase-input MuiInput-input css-pjfl94-MuiInputBase-input-MuiInput-input"
               value
        >
      </div>
    </div>
  </label>
</form>
`;
